# [#23443] KunenaRoute doesn't assign Itemids when called outside of Kunena # [#25415] Tableless template regression: Fix layout issues inside topic
git-svn-id: file:///Users/oratzes/svn/kunena@4747 daf2aa89-cb5b-0410-b8ee-fe93ebc9b27d

--- a/trunk/2.0/components/com_kunena/template/default20/css/design.css
+++ b/trunk/2.0/components/com_kunena/template/default20/css/design.css
@@ -711,8 +711,8 @@ table {border-collapse: collapse;}
 
 /*---------- Display User Posts ------------- */
 
-#kunena .kpost-body,
-#kunena .kpost-message {
+#kunena .kposts-body,
+#kunena .kposts-message {
 	border-color: #CCCCCC;
 }
 
